<resources>

    <string name="app_name">Lab 01</string>

    <string name="txtTitulo">LABORATORIO 01</string>
    <string name="editText">INGRESAR TEXTO</string>
    <string name="boton">SIGUIENTE</string>
    <string name="textView">TEXTVIEW</string>


    <string name="strNavegar">ver Pagina</string>
    <string name="strListado">Listado</string>
    <string name="strListadoBBDD">Lista BB.DD.</string>
    <string name="strAcerca">Acerca de</string>

    <string name="strSalir">Cerrando</string>

    <string name="logo_description">Para espiritus emprendedores</string>


    <string name="tvItemComponent">Component</string>
    <string name="tvItemField">Item</string>

    <string name="lblMan">Masculino</string>
    <string name="lblWoman">Femenino</string>

    <string name="verContacto">Detalle Contacto</string>
    <string name="addContacto">Agregar Contacto</string>
    <string name="saveContacto">Guardar Contacto</string>
    <string name="removeContacto">Eliminar Contacto</string>

</resources>
