<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item   android:id="@+id/menu_opcion_100"
        android:icon="@drawable/ic_logo"
        android:title="@string/strNavegar"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_opcion_400"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:orderInCategory="400"
        android:title="@string/strListado"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_opcion_200"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="800"
        android:title="@string/strAcerca"
        app:showAsAction="collapseActionView" />

    <item   android:id="@+id/menu_opcion_900"
            android:title="@string/strSalir"
            android:orderInCategory="900"
            app:showAsAction="collapseActionView"/>
</menu>